Clear Search Button and Fixed z-index

--- a/src/assets/css/sass/user.scss
+++ b/src/assets/css/sass/user.scss
@@ -11,6 +11,7 @@
 }
 .custom_table thead th {
     word-break: unset !important;
+    line-height: 0;
 }
 
 .small_input_search_field {
